0.0204
 - Return 200 for GET janus/trello
 - Remove uid prefix

0.0203
 - Fix init script bombing on the pidfile dir already existing
0.0202
 - Bump dependencies

0.0201
 - Fix error on empty pidfile on startup

0.0200
 - Added init script, and starman dependency

0.0100
 - Initial release