@@ -1,3 +1,6 @@
+NEXT
+ - Handle closed/resolved cases, deleting from trello as needed
+
 0.0204
  - Return 200 for GET janus/trello
  - Remove uid prefix
